make controller and add method for Viegem

--- a/app/src/main/res/layout/activity_new_gasted.xml
+++ b/app/src/main/res/layout/activity_new_gasted.xml
@@ -73,7 +73,7 @@
             <TableRow>
                 <EditText
                     android:id="@+id/valor"
-                    android:inputType="text"
+                    android:inputType="numberDecimal"
                     android:background="@drawable/edit_text_box"
                     android:textColor="@color/colorPrimaryDark"/>
 
